--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,29 @@
 <html lang="en">
   <head>
     {% block head %}
+
+    <!-- CSS -->
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
+
+    <!-- Javascript stuffs -->
+    <script type="text/javascript" src="/static/js/jquery-1.8.0.js"></script>
+    
+    <!-- Twitter Bootstrap -->
+    <script type="text/javascript" src="/static/js/bootstrap.js"></script> 
+
+    <!-- Insights libraries -->
+    <script type="text/javascript" src="/static/js/common.js"></script>
+    <script type="text/javascript" src="/static/js/insights.js"></script>
+
     <meta charset="utf-8">
     <title>MY_NEW_APP</title>
+
+    <!-- Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
+
     <!-- Facebook Open Graph tags -->
 	<meta property="og:title" content="Insights"/>
 	<meta property="og:type" content=""/>
