Added arbor js bubbles, edges between insights, simple search and gui

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,24 +13,30 @@
     <!-- Twitter Bootstrap -->
     <script type="text/javascript" src="/static/js/bootstrap.js"></script> 
 
+    <!-- Arbor -->
+    <script type="text/javascript" src="/static/js/arbor.js"></script>
+    <script type="text/javascript" src="/static/js/arbor-tween.js"></script>
+    <script type="text/javascript" src="/static/js/arbor-graphics.js"></script>
+    <script type="text/javascript" src="/static/js/bubbles.js"></script>
+
     <!-- Insights libraries -->
     <script type="text/javascript" src="/static/js/common.js"></script>
     <script type="text/javascript" src="/static/js/insights.js"></script>
 
     <meta charset="utf-8">
-    <title>MY_NEW_APP</title>
+    <title>Gems</title>
 
     <!-- Meta Tags -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport_old" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Facebook Open Graph tags -->
-	<meta property="og:title" content="Insights"/>
+	<meta property="og:title" content="Gems"/>
 	<meta property="og:type" content=""/>
 	<meta property="og:url" content=""/>
 	<meta property="og:image" content="" />
-	<meta property="og:site_name" content="Insights"/>
+	<meta property="og:site_name" content="Gems"/>
 	<meta property="og:description" content=""/>
 
     <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
@@ -59,7 +65,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </a>
-              <a class="brand" href="#">MY_NEW_APP</a>
+              <a class="brand" href="#">GEMS</a>
               <div class="nav-collapse">
                 <ul class="nav">
                 </ul>
