--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,15 @@
 
 <br /><br /><br />
 
-<div align="center" style="font-size:70px;">My Insights:</div>
+<div align="center" style="font-size:70px;">My Gems:</div>
 
-<br /><br /><br />
+<br /><br />
+
+<p>Search: <input type="text" id="search" class="search" /></p>
+
+<br /><br />
+
+<canvas id="viewport" width="1000" height="700"></canvas>
 
 <div class="insights-container">
 
